Sun Jun 25 23:02:12 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, mkconfig.rb: catch-up for latest autoconf.

Thu May 25 01:52:07 2006  nobuyoshi nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: merge multiple entries to an entry with multiple lines.

Wed Nov 30 23:52:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (NEWHEAP, ADD2HEAP): set count after pointer was set.
	  fixed: [ruby-dev:27896]

Thu Oct 13 23:25:10 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (HEAPCNT): bison allocates indivisible size.
	  fixed: [ruby-core:06261]

Wed Oct 19 19:26:15 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_gc_mark_parser): get rid of segfault with old yacc.
	  fixed: [ruby-dev:27439]

Mon Oct 17 21:18:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_heap): byacc never free parser stack.
	  fixed: [ruby-dev:27428]

Sat Oct  8 18:56:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_parser_malloc, rb_parser_free): manage parser stack on
	  heap.  [ruby-list:41199]

Thu Dec 25 04:00:44 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.8.1 released.

Thu Dec 25 00:17:53 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: check for nanosleep, -lrt if required.
	  [ruby-core:02059]

	* eval.c (thread_timer): use select(2) if nanosleep(2) is not
	  available.

	* eval.c: check __stub_getcontext for glibc on some platforms.
	  [ruby-list:38984]

Wed Dec 24 23:48:04 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/soap/test_basetype.rb, test/soap/marshal/test_marshal.rb
	  test/xsd/test_xsd.rb: use "(-1.0 / (1.0 / 0.0))" instead of "-0.0"
	  to express -0.0.  [ruby-talk:88786]

Wed Dec 24 23:29:30 2003  Tanaka Akira  <akr@m17n.org>

	* lib/tsort.rb (test_orphaned_break): removed.

Wed Dec 24 20:53:06 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/tkmulticolumnlist.rb: new sample

	* ext/tk/sample/tkmultilistframe.rb: bug fix
