@@ -1,3 +1,7 @@
+Tue Jan 30 12:05:35 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mkconfig.rb: autoconf 2.61 support.  [ruby-core:10016]
+
 Sun Jun 25 23:02:12 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in, mkconfig.rb: catch-up for latest autoconf.
